# ruet-cse

./: .env  .env.example  README.md  app.py  package.json  pyproject.toml  requirements.txt  routine_even_week.json  routine_odd_week.json  vercel.json
.editor_tools_backups/: app.py.20260720-161423.bak  app.py.20260720-161720.bak  vercel.json.20260722-135049.bak
api/: routine-image.js
static/: site.css  style.css
static/js/: editor.js
templates/: admin_login.html  admin_panel.html  edit_experiment.html  edit_teacher.html  experiments.html  index.html  routine_display.html  routine_editor.html  schedule_edit.html  schedule_index.html  teachers.html
